Fixed private mention icon alignment in detailed view

--- a/mastodon/app/javascript/styles/tangerineui-purple/layout-single-column.scss
+++ b/mastodon/app/javascript/styles/tangerineui-purple/layout-single-column.scss
@@ -1566,7 +1566,7 @@ body.layout-single-column  {
 }
 .layout-single-column .detailed-status-direct .fa.fa-at::before,
 .layout-single-column .detailed-status__wrapper-direct .fa.fa-at::before {
-    background-position: center 4px;
+    background-position: center 2px;
 }
 .layout-single-column .status-direct.muted .status__content {
     background: rgba(155, 174, 200, 0.1);
